# Julyberries

./: .env  .env.docker  .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  init.sql  prometheus.yml  promtail-config.yaml  promtail-config.yml  pyproject.toml
auth/: .env.template  .gitignore  main.py  pyproject.toml
auth/action/: __init__.py  create_permissions.py  create_superuser.py
auth/alembic/: env.py
auth/alembic/versions/: 2025_08_13_2226-d72e73f64f40_create_all_table.py  2025_08_18_2058-34ebf7e7b571_initial_migration.py  2025_08_21_2353-f723b935f57d_fix_column_access_token.py  2025_08_22_0002-531ccec2fb46_fix_column_access_token.py  2025_08_26_1113-a667b6e7435e_create_new_all_table_id_uuid.py  2025_08_26_1118-32499e82825c_create_new_all_table_id_uuid.py  2025_08_26_1124-89f889f24b24_create_new_all_table_id_uuid.py  2025_08_26_1125-74297b1c083a_create_new_all_table_id_uuid.py  2025_08_26_1141-9347ca9ead71_create_new_all_table_id_uuid.py  2025_08_26_1411-8015a0db423b_create_new_all_table_id_uuid.py
auth/api/: user_router.py
auth/api/CRUD/: user_crud.py
auth/api/dependecies/: helpers.py  redis_client.py  redis_token.py  user_role.py  user_token.py
auth/api/routers/: __init__.py  diagnostic_redis.py  user_router.py
auth/core/: config.py
auth/utils/: jwt_validate.py  metrics.py
catalogs_services/: .env  .env.template  main.py  pyproject.toml
catalogs_services/alembic/: env.py
catalogs_services/api/: __init__.py  router_product.py
catalogs_services/core/: config.py
catalogs_services/utils/: metrics.py  middleware_prometheus.py
(+126 files in other folders)
