[tool.poetry]
package-mode=false

[tool.poetry.dependencies]
python="^3.12"
fastapi = "^0.116.1"
pydantic-settings = "^2.10.1"
sqlalchemy = "^2.0.43"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}
uvicorn = "^0.35.0"
alembic = "^1.16.4"
asyncpg = "^0.30.0"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
redis = "^6.4.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

