[tool.poetry]
package-mode=false

[tool.poetry.dependencies]
python="^3.13.5"
fastapi = "^0.116.1"
alembic = "^1.16.4"
uvicorn = "^0.35.0"
pydantic-settings = "^2.10.1"
asyncpg = "^0.30.0"
jwt = "^1.4.0"
httpx = "^0.28.1"
redis = "^6.4.0"
fastapi-cache2 = "^0.2.2"
kafka = "^1.3.5"
aiokafka = "^0.12.0"
prometheus-client = "^0.23.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

